--- a/ConflictTestGit/ConflictTestGit.csproj
+++ b/ConflictTestGit/ConflictTestGit.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IliasForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IliasForm.Designer.cs">
+      <DependentUpon>IliasForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
